deployment/ingress.yaml
# deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamlit-ingress
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - streamlit-ensae-project-genderequity.lab.sspcloud.fr
  rules:
  - host: streamlit-ensae-project-genderequity.lab.sspcloud.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: streamlit-service
            port:
              number: 80
